--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export"
+    "export": "next export",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "date-fns": "^2.11.1",
@@ -22,6 +23,8 @@
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.43",
     "@types/react-html-parser": "^2.0.1",
+    "cypress": "^4.12.1",
+    "cypress-image-snapshot": "^4.0.1",
     "typescript": "^3.9.7"
   }
 }
