--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -14,11 +14,13 @@ jobs:
       - name: Install
         run: npm install --no-save
       - name: Build
-        run: npm run build             
+        run: npm run build   
+      - name: Export - produce html files
+        run: npm run export           
       - name: Deploy 
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with: 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: out
-          CLEAN: true # Automatically remove deleted files from the deploy branch
+          branch: gh-pages
+          folder: out
+          clean: true # Automatically remove deleted files from the deploy branch
