--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
+    "highlight.js": "^11.2.0",
     "next": "^10.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
