--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -6,18 +6,21 @@ on:
 jobs:
   cypress-run:
     runs-on: ubuntu-20.04
+    container: cypress/browsers:node12.13.0-chrome78-ff70 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
           browser: chrome
           headless: true
-          env: host=https://alanionita.github.io
+          env: host=http://localhost,port=3000
+          start: npm start
           
       - uses: actions/upload-artifact@v1
         if: failure()
         with:
-          name: cypress-snapshots
-          path: cypress/snapshots    
+          name: fails
+          path: cypress/    
