--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -16,8 +16,7 @@ jobs:
         with:
           browser: chrome
           headless: true
-          env: host=http://localhost,port=3000
-          start: npm start
+          env: host=https://alanionita.github.io
           
       - uses: actions/upload-artifact@v1
         if: failure()
